log
Thu Apr 21 11:32:09 HSP 2022: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 10/70
8a56e03
Thu Apr 21 11:35:09 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
01ec5ff
Thu Apr 21 11:42:15 HSP 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
22c7977
Thu Apr 21 11:50:30 HSP 2022: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
0d95bf7
Thu Apr 21 11:52:08 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
2f4f48a
Thu Apr 21 12:03:28 HSP 2022: 
 treemap.c | 35 ++++++++++++++++++++++++-----------
 1 file changed, 24 insertions(+), 11 deletions(-)
 tests:  13|5
total_score: 25/70
2adb5c3
Thu Apr 21 12:05:43 HSP 2022: 
 treemap.c | 18 +++---------------
 1 file changed, 3 insertions(+), 15 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:74:12: error: 'tree' undeclared (first use in this function)
         if(tree->lower_than(key, aux->pair->key) == 1){
            ^~~~
treemap.c:74:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:74:29: error: 'key' undeclared (first use in this function)
         if(tree->lower_than(key, aux->pair->key) == 1){
                             ^~~
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
beaded1
Thu Apr 21 12:09:45 HSP 2022: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:72:5: error: 'tree' undeclared (first use in this function)
     tree->current = aux;
     ^~~~
treemap.c:72:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
7cac98b
Thu Apr 21 12:12:46 HSP 2022: 
 treemap.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:74:12: error: 'tree' undeclared (first use in this function)
         if(tree->lower_than(aux->pair->key, x->pair->key) == 1){
            ^~~~
treemap.c:74:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ac758b4
Thu Apr 21 12:12:58 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:74:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(aux->pair->key, x->pair->key) == 1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3aea08e
Thu Apr 21 12:15:23 HSP 2022: 
 treemap.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:69:11: error: 'true' undeclared (first use in this function)
     while(true)
           ^~~~
treemap.c:69:11: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
91cb750
Thu Apr 21 12:16:18 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
0ca072b
Thu Apr 21 12:17:00 HSP 2022: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
f8c41ff
Fri Apr 22 15:08:42 HSP 2022: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  16|4
total_score: 30/70
8935a70
Fri Apr 22 15:10:17 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|4
total_score: 30/70
a134fa5
Fri Apr 22 22:49:24 HSP 2022: 
 treemap.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 58 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:80:11: error: variable 'unUse' set but not used [-Werror=unused-but-set-variable]
     Pair *unUse = NULL;
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6276430
Fri Apr 22 22:51:07 HSP 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:94:15: error: variable 'unUse' set but not used [-Werror=unused-but-set-variable]
         Pair *unUse = searchTreeMap(tree, rightSon->pair->key); //Solo se usa search para actualizar el current
               ^~~~~
treemap.c:113:15: error: variable 'unUse' set but not used [-Werror=unused-but-set-variable]
         Pair *unUse = searchTreeMap(tree, leftSon->pair->key); //Solo se usa search para actualizar el current
               ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0dd76e9
Fri Apr 22 22:57:48 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:94:50: error: value computed is not used [-Werror=unused-value]
         searchTreeMap(tree, rightSon->pair->key) == NULL)
                                                  ^
treemap.c:94:57: error: expected ';' before ')' token
         searchTreeMap(tree, rightSon->pair->key) == NULL)
                                                         ^
treemap.c:94:57: error: expected statement before ')' token
cc1.exe: all warnings being treated as errors
Compilation failed
021fb98
Fri Apr 22 22:58:23 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4964052
Fri Apr 22 23:01:26 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
194854a
Fri Apr 22 23:03:25 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
4aeebb4
Fri Apr 22 23:04:54 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a0d3833
Fri Apr 22 23:15:36 HSP 2022: 
 treemap.c | 68 ++++++++++++++++++++++-----------------------------------------
 1 file changed, 24 insertions(+), 44 deletions(-)
 tests:  0|0
6831f8b
Fri Apr 22 23:17:01 HSP 2022: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
4afe26a
Fri Apr 22 23:17:49 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
ccbc03c
Fri Apr 22 23:18:23 HSP 2022: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  17|4
total_score: 35/70
dce0c66
Fri Apr 22 23:30:03 HSP 2022: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  19|3
total_score: 40/70
a305def
